...
    init() {
        self.init(viewModel: AddMemberFormViewModel())
    }

    var body: some View {
        VStack(alignment: .leading) {
            TextField("New member name", text: $newMemberName)
                .tag("newMemberName")
                .padding(.bottom, 8)

            if viewModel.invalidMemberNameError {
                Text("invalid member name")
                    .font(.system(size: 12))
...
            HStack {
                Button(action: {
                    viewModel.addMember(name: newMemberName)
                    newMemberName = ""
                }) {
                    Spacer()
                    Text("Add new member")
                    Spacer()
                }
            }
        }
        .frame(height: 100)
        .onAppear {
...
